--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- Correct viewport so media queries kick in -->
+  <!-- Ensure media queries fire -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Hemanth's website.">
   <meta name="author" content="Hemanth Sabbella">
@@ -28,7 +28,7 @@
       text-decoration: underline;
     }
 
-    /* hide mobile elements on desktop */
+    /* hide mobile-specific elements on desktop */
     #menu-btn, .mobile-menu {
       display: none;
     }
@@ -39,10 +39,11 @@
         display: none !important;
       }
 
-      /* show hamburger button */
+      /* show a larger hamburger button */
       #menu-btn {
         display: inline-block !important;
-        font-size: 1.2em;          /* match your h3 */
+        font-size: 1.5em;          /* increased size */
+        line-height: 1;
         background: none;
         border: none;
         color: var(--ocean-primary);
@@ -55,8 +56,16 @@
       .header {
         text-align: center;
       }
+      .header-right {
+        display: inline-flex;
+        align-items: center;
+      }
+      .header-right h3 {
+        margin: 0;
+        display: inline;
+      }
 
-      /* mobile menu (hidden by default) */
+      /* mobile menu (hidden initially) */
       .mobile-menu {
         display: none;
         list-style: none;
@@ -70,14 +79,14 @@
         color: var(--ocean-primary);
         text-decoration: none;
         display: block;
-        font-size: 1rem;  /* same as desktop */
+        font-size: 1rem;  /* same as desktop text */
       }
       .mobile-menu a:hover {
         color: var(--ocean-hover);
         text-decoration: underline;
       }
 
-      /* center avatar & contacts */
+      /* center avatar & contact icons */
       .row.marketing .col-sm-4 {
         text-align: center;
         margin: 0 auto;
@@ -90,7 +99,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <!-- desktop nav-pills (unchanged) -->
+      <!-- desktop nav-pills unchanged -->
       <ul class="nav nav-pills pull-right">
         <li><a href="/projects" style="text-transform: none;">Projects</a></li>
         <li><a href="/publications" style="text-transform: none;">Publications</a></li>
@@ -100,11 +109,13 @@
         </li>
       </ul>
 
-      <!-- your name exactly as desktop, plus hidden-by-default button -->
-      <h3 class="text-muted" style="text-transform: none; display: inline;">
-        <a href="/">Hemanth Sabbella</a>
-      </h3>
-      <button id="menu-btn" aria-label="Menu">☰</button>
+      <!-- desktop name + hidden-by-default hamburger -->
+      <div class="header-right">
+        <h3 class="text-muted" style="text-transform: none;">
+          <a href="/">Hemanth Sabbella</a>
+        </h3>
+        <button id="menu-btn" aria-label="Menu">☰</button>
+      </div>
     </div> <!-- /header -->
 
     <!-- mobile-only menu -->
@@ -143,6 +154,7 @@
           </p>
         </span>
       </div>
+
       <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
         <p>
           Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS,
@@ -150,7 +162,7 @@
           advised by Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at M3S,
           under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a>
         </p>
-        <!-- rest of your content unchanged -->
+        <!-- rest of your original content unchanged -->
       </div>
     </div>
 
