--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     }
 
     @media only screen and (max-width: 768px) {
-      /* Hide desktop nav-pills */
+      /* hide desktop nav-pills */
       .nav.nav-pills.pull-right {
         display: none !important;
       }
 
-      /* Hamburger button */
+      /* show larger hamburger */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -53,7 +53,7 @@
         margin-left: 0.5rem;
       }
 
-      /* Center header + align icon */
+      /* center header + align icon */
       .header {
         text-align: center;
       }
@@ -66,9 +66,9 @@
         display: inline;
       }
 
-      /* Polished mobile menu card */
+      /* mobile menu styling */
       .mobile-menu {
-        display: none;           /* stays hidden until you tap */
+        display: none;           /* hidden until tapped */
         max-width: 300px;
         margin: 0.75rem auto 1.5rem;
         background: #fff;
@@ -83,15 +83,15 @@
       }
       .mobile-menu a {
         display: block;
-        padding: 0.75rem 1rem;
-        font-size: 1rem;
+        padding: 1rem 1.25rem;      /* more padding */
+        font-size: 1.25rem;         /* larger text */
         color: var(--ocean-primary);
       }
       .mobile-menu a:hover {
         background: rgba(0,150,199,0.1);
       }
 
-      /* Center avatar & contacts */
+      /* center avatar & contacts */
       .row.marketing .col-sm-4 {
         text-align: center;
         margin: 0 auto;
@@ -104,7 +104,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <!-- Desktop nav-pills (unchanged) -->
+      <!-- desktop nav-pills (unchanged) -->
       <ul class="nav nav-pills pull-right">
         <li><a href="/projects" style="text-transform: none;">Projects</a></li>
         <li><a href="/publications" style="text-transform: none;">Publications</a></li>
@@ -114,7 +114,7 @@
         </li>
       </ul>
 
-      <!-- Mobile header: name + hamburger -->
+      <!-- mobile header: name + hamburger -->
       <div class="header-right">
         <h3 class="text-muted" style="text-transform: none;">
           <a href="/">Hemanth Sabbella</a>
@@ -123,30 +123,35 @@
       </div>
     </div> <!-- /header -->
 
-    <!-- Mobile-only menu -->
+    <!-- mobile-only menu -->
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
-      <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
+      <li>
+        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">
+          CV
+        </a>
+      </li>
     </ul>
 
+    <!-- Original content unchanged -->
     <div class="row marketing">
       <div class="col-sm-4">
         <img class="img-circle avatar" width="200" height="200" alt="Hemanth Sabbella"
              src="img/hemanth_percom_resized3.jpg">
         <p>
           <img src="https://img.icons8.com/windows/32/000000/email-open.png"
-               style="width:25px; height:25px; vertical-align:middle">
+               style="width:25px; height:25px; vertical-align:middle;">
           <a href="mailto:shrsabbella.2024@phdcs.smu.edu.sg">Email</a>
         </p>
         <p>
           <img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png"
-               style="width:23px; height:23px; vertical-align:middle">
+               style="width:23px; height:23px; vertical-align:middle;">
           <a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a>
         </p>
         <p>
           <img src="https://img.icons8.com/material-two-tone/344/google-scholar.png"
-               style="width:25px; height:25px; vertical-align:middle">
+               style="width:25px; height:25px; vertical-align:middle;">
           <a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&amp;hl=en">Google Scholar</a>
         </p>
         <span itemprop="hashtags">
@@ -162,14 +167,14 @@
           advised by Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at M3S,
           under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a>
         </p>
-        <!-- ...rest of your content unchanged... -->
+        <!-- …rest unchanged… -->
       </div>
     </div>
 
     <div class="row marketing">
       <p style="font-size:21px; color:var(--ocean-primary);">Highlights:</p>
       <ul style="list-style:none; padding:0; margin:0;">
-        <!-- …your highlight items… -->
+        <!-- …highlight items… -->
       </ul>
     </div>
 
@@ -178,11 +183,11 @@
         <div class="col-sm-8"><p><small></small></p></div>
         <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
-    </div><!-- /footer -->
-  </div><!-- /container -->
+    </div>
+  </div>
 
   <script>
-    // Toggle mobile menu
+    // toggle mobile menu
     document.getElementById('menu-btn').addEventListener('click', function() {
       var menu = document.getElementById('mobile-menu');
       menu.style.display = (menu.style.display === 'block' ? 'none' : 'block');
