--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       text-decoration: underline;
     }
 
-    /* Hide mobile-specific elements on desktop */
+    /* Hide mobile elements on desktop */
     #menu-btn,
     .mobile-menu {
       display: none;
     }
 
     @media only screen and (max-width: 768px) {
-      /* hide desktop nav-pills */
+      /* Hide desktop nav-pills */
       .nav.nav-pills.pull-right {
         display: none !important;
       }
 
-      /* larger hamburger button */
+      /* Hamburger button */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -53,7 +53,7 @@
         margin-left: 0.5rem;
       }
 
-      /* center header + align icon */
+      /* Center header + align icon */
       .header {
         text-align: center;
       }
@@ -66,9 +66,9 @@
         display: inline;
       }
 
-      /* polished mobile menu card */
+      /* Mobile menu card */
       .mobile-menu {
-        display: none;          /* remains hidden until tapped */
+        display: none; /* hidden until tapped */
         max-width: 300px;
         margin: 0.75rem auto 1.5rem;
         background: #fff;
@@ -83,15 +83,15 @@
       }
       .mobile-menu a {
         display: block;
-        padding: 1.5rem 1.5rem;   /* increased padding */
-        font-size: 1.5rem;        /* larger text */
+        padding: 1rem 1.25rem;
+        font-size: 1.25rem;
         color: var(--ocean-primary);
       }
       .mobile-menu a:hover {
         background: rgba(0,150,199,0.1);
       }
 
-      /* center avatar & contacts */
+      /* Center avatar & contacts */
       .row.marketing .col-sm-4 {
         text-align: center;
         margin: 0 auto;
@@ -103,6 +103,7 @@
 
 <body>
   <div class="container">
+
     <div class="header">
       <!-- Desktop nav-pills (unchanged) -->
       <ul class="nav nav-pills pull-right">
@@ -127,10 +128,11 @@
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
-      <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
+      <li>
+        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
+      </li>
     </ul>
 
-    <!-- Original content unchanged -->
     <div class="row marketing">
       <div class="col-sm-4">
         <img class="img-circle avatar" width="200" height="200" alt="Hemanth Sabbella"
@@ -156,6 +158,7 @@
           </p>
         </span>
       </div>
+
       <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
         <p>
           Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS,
@@ -163,14 +166,89 @@
           advised by Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at M3S,
           under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a>
         </p>
-        <!-- …rest of content unchanged… -->
+        <p>
+          I graduated from
+          <span itemprop="affiliation">
+            <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
+          </span>
+          with a degree in Electronics and Communications Engineering. Previously, I worked as a
+          Senior Project Associate at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a>
+          under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
+        </p>
+        <p>
+          I specialize in deep learning for MCUs (tinyML), low-power embedded systems, digital and analog
+          circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable
+          sensing systems, and resource-constrained models, exploring their integration into ubiquitous and
+          robotic applications.
+        </p>
+        <p>
+          In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you
+          can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
+          enjoy reading non-fiction, and have a diverse palette when it comes to food.
+        </p>
       </div>
     </div>
 
     <div class="row marketing">
       <p style="font-size:21px; color:var(--ocean-primary);">Highlights:</p>
       <ul style="list-style:none; padding:0; margin:0;">
-        <!-- …highlight items… -->
+        <li style="margin:0.5em 0;">
+          💼 <strong>05-2025:</strong> Started as a Visiting Student at Singapore-MIT Alliance for
+          Research and Technology Center with
+          <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>01-2025:</strong> Workshop paper got accepted at
+          <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea’25</a>
+          collocated with PerCom 2025
+        </li>
+        <li style="margin:0.5em 0;">
+          🎓 <strong>08-2024:</strong> Joined as a Ph.D. student at SCIS, SMU
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
+        </li>
+        <li style="margin:0.5em 0;">
+          📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>12-2023:</strong> Full paper got accepted at
+          <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023
+          [Acceptance rate: 25%]
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal
+          [Impact factor: 4.3]
+        </li>
+        <li style="margin:0.5em 0;">
+          🚀 <strong>04-2022:</strong>
+          <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect
+          timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]
+        </li>
+        <li style="margin:0.5em 0;">
+          📝 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the
+          IEEE CAS Society]
+        </li>
+        <li style="margin:0.5em 0;">
+          🎥 <strong>11-2021:</strong> Video Poster got accepted at
+          <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a>
+        </li>
+        <li style="margin:0.5em 0;">
+          🏅 <strong>11-2019:</strong> Selected for
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">
+            MIT Hacking Medicine, Grand Hack 2019
+          </a>, USA
+        </li>
+        <li style="margin:0.5em 0;">
+          🏆 <strong>10-2019:</strong>
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">
+            All India Winning Team
+          </a>
+          – Hackware 2019, Schneider Electric Innovation Challenge
+        </li>
       </ul>
     </div>
 
@@ -179,8 +257,9 @@
         <div class="col-sm-8"><p><small></small></p></div>
         <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
-    </div><!-- /footer -->
-  </div><!-- /container -->
+    </div> <!-- /footer -->
+
+  </div> <!-- /container -->
 
   <script>
     // Toggle mobile menu
